<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sugerencias.MainActivity" >

    <Button
        android:id="@+id/btnnueva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/gruporg"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/normalfondo"
        android:padding="8dp"
        android:text="@string/btnnuevasugerencia"
        android:textColor="#C77405"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/gruporg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnnueva" >

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio1" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio2" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio3" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonConfirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/gruporg"
        android:layout_below="@+id/timePicker1"
        android:background="@drawable/normalfondo"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/btnconfirmar"
        android:textColor="#C77405"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btncancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonConfirmar"
        android:layout_alignBottom="@+id/buttonConfirmar"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/buttonConfirmar"
        android:background="@drawable/normalfondo"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/btncancelaralarma"
        android:textColor="#C77405"
        android:textStyle="bold" />

    <TimePicker
        android:id="@+id/timePicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gruporg"
        android:layout_centerHorizontal="true"
        android:gravity="center" />

</RelativeLayout>