<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:background="@color/azul2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >
    
     <LinearLayout
        android:id="@+id/layoucuerpo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bordes"
        
        android:orientation="vertical"
        android:padding="0dp" >
<LinearLayout
        android:id="@+id/layoarriba"
        android:layout_width="match_parent"
       android:gravity="center"
        android:layout_height="150dp"
       android:padding="0dp"
        android:orientation="vertical" >
        
<TextView
		       android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="40dip"
                  android:layout_marginBottom="40dip"
                  android:text="@string/titulo_login"
                  android:gravity="center"
                  android:textSize="24sp"
                  android:textStyle="bold"
                  android:textColor="@color/azul2"/>
             </LinearLayout>
             
		    <EditText android:id="@+id/txtUserName" 
		        android:layout_height="wrap_content" 
		        android:layout_width="fill_parent" 
             android:hint="@string/e_usuario" 
             android:inputType="text" />
		    
		     <EditText 
		     android:id="@+id/txtPass" 
		     android:layout_height="wrap_content" 
             android:layout_width="fill_parent" 
             android:hint="@string/e_password" 
             android:inputType="textPassword"
             android:layout_marginTop="15dip" 
             android:layout_marginBottom="30dip"/>

		     <LinearLayout
		         android:id="@+id/layoupie"
		         android:layout_width="match_parent"
		         android:layout_height="200dp"
		         android:gravity="center"
		         android:orientation="vertical"
		         android:padding="0dp" >

		         <Button
		             android:id="@+id/btnEnviar"
		             android:layout_width="match_parent"
		             android:layout_height="wrap_content"
		             android:layout_gravity="center_horizontal"
		             android:background="@drawable/normalfondo"
		             android:padding="12dp"
		             android:text="@string/btnenviar"
		             android:textColor="#ff5722"
		             android:textStyle="bold" />
		     </LinearLayout>

</LinearLayout>
</LinearLayout>
